dov-bear-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector:
    matchLabels:
      name: dov-bear-po
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-from-same-namespace
spec:
  podSelector:
    matchLabels:
      name: dov-bear-po
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels: {}
